; ModuleID = '/home/carl/AnghaBench/fastsocket/kernel/kernel/trace/extr_ring_buffer.c_rb_event_index.c'
source_filename = "/home/carl/AnghaBench/fastsocket/kernel/kernel/trace/extr_ring_buffer.c_rb_event_index.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.ring_buffer_event = type { i32 }

@PAGE_MASK = common dso_local global i64 0, align 8
@BUF_PAGE_HDR_SIZE = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (%struct.ring_buffer_event*)* @rb_event_index to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @rb_event_index(%struct.ring_buffer_event* %0) #0 {
  %2 = alloca %struct.ring_buffer_event*, align 8
  %3 = alloca i64, align 8
  store %struct.ring_buffer_event* %0, %struct.ring_buffer_event** %2, align 8
  %4 = load %struct.ring_buffer_event*, %struct.ring_buffer_event** %2, align 8
  %5 = ptrtoint %struct.ring_buffer_event* %4 to i64
  store i64 %5, i64* %3, align 8
  %6 = load i64, i64* %3, align 8
  %7 = load i64, i64* @PAGE_MASK, align 8
  %8 = xor i64 %7, -1
  %9 = and i64 %6, %8
  %10 = load i32, i32* @BUF_PAGE_HDR_SIZE, align 4
  %11 = sext i32 %10 to i64
  %12 = sub i64 %9, %11
  %13 = trunc i64 %12 to i32
  ret i32 %13
}


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
